--- a/themes/alnur-theme/sass/abstracts/_structure.scss
+++ b/themes/alnur-theme/sass/abstracts/_structure.scss
@@ -1,11 +1,9 @@
 // Media Queries
 
-$breakpoints: (
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 1024px,
-    xl: 1440px,
-    xxl: 1920px,
-    xxxl: 2560px
-);
+$query__xs: 0px;
+$query__sm: 576px;
+$query__md: 768px;
+$query__lg: 1024px;
+$query__xl: 1440px;
+$query__xxl: 1920px;
+$query__xxxl: 2560px;
