--- a/themes/alnur-theme/style.css
+++ b/themes/alnur-theme/style.css
@@ -6,6 +6,25 @@ Version: 1.0
 License: GNU General Public license v2 or later
 Text Domain: alnur
 */
+h2 {
+  font-family: "Novecento Web demiBold";
+  font-size: 2rem;
+}
+
+h3 {
+  font-family: "Novecento Web demiBold";
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-family: "Novecento Web demiBold";
+  font-size: 1.25rem;
+}
+
+p {
+  font-family: "Merriweather Web Light";
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
