--- a/themes/alnur-theme/style.css
+++ b/themes/alnur-theme/style.css
@@ -113,8 +113,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -201,6 +199,32 @@ table {
   font-weight: normal;
   font-style: normal;
 }
+.btn--green {
+  background-color: #248a83;
+  border: 1px solid #248a83;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.btn--green:hover {
+  background-color: #fff;
+  color: #248a83;
+}
+
+.btn--black {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.btn--black:hover {
+  background-color: #000;
+  color: #fff;
+}
+
 .home-hero {
   position: relative;
 }
@@ -217,14 +241,70 @@ table {
   width: 40%;
 }
 
+.home-shop {
+  margin-left: 2em;
+  margin-right: 2em;
+}
+.home-shop__heading {
+  margin: 50px 0 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+.home-shop__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 50px;
+}
+.home-shop__item {
+  border: 1px solid #e1e1e1;
+  border-top: 3px solid #e1e1e1;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-content: space-around;
+  max-width: 300px;
+  padding: 0 2em;
+}
+.home-shop__item img {
+  width: 100px;
+  margin: 20px auto;
+}
+.home-shop__item p {
+  text-align: center;
+}
+.home-shop__btn {
+  margin: 30px auto;
+}
+
 @media only screen and (min-width: 576px) {
   .home-hero__logo {
     width: 40%;
+  }
+  .home-shop__item {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media only screen and (min-width: 768px) {
   .home-hero__logo {
     width: auto;
+  }
+  .home-shop__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .home-shop__item {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .home-shop__container {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
