INHAB-4 add banner scss and update style.scss

--- a/themes/alnur-theme/sass/style.scss
+++ b/themes/alnur-theme/sass/style.scss
@@ -21,6 +21,7 @@ Text Domain: alnur
 @import "components/buttons";
 @import "components/carousel";
 @import "components/slider";
+@import "components/banner";
 
 // Import footer, forms, grid, header, navigation, and sidebar
 @import "layout/footer";
