--- a/themes/alnur-theme/sass/pages/_home.scss
+++ b/themes/alnur-theme/sass/pages/_home.scss
@@ -1,22 +1,4 @@
-// Home hero block
-
-.home-hero {
-  position: relative;
-
-  &__img {
-    filter: brightness(50%);
-    height: auto;
-    width: 100%;
-  }
-
-  &__logo {
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 40%;
-  }
-}
+// Home hero block -- see banner.scss
 
 // Home Shop Stuff block
 .home-shop {
@@ -60,12 +42,6 @@
 }
 
 @media only screen and (min-width: $query__sm) {
-  .home-hero {
-    &__logo {
-      width: 40%;
-    }
-  }
-
   // Home Shop Stuff Block
   .home-shop {
     &__item {
@@ -76,12 +52,6 @@
 }
 
 @media only screen and (min-width: $query__md) {
-  .home-hero {
-    &__logo {
-      width: auto;
-    }
-  }
-
   // Home Shop Stuff Block
   .home-shop {
     &__list {
