--- a/themes/alnur-theme/sass/abstracts/_variables.scss
+++ b/themes/alnur-theme/sass/abstracts/_variables.scss
@@ -21,6 +21,11 @@ $black-color: #000;
 
 // headings and paragraph
 
+h1 {
+  font-family: $font-primary;
+  font-size: 2.5rem;
+}
+
 h2 {
   font-family: $font-primary;
   font-size: 2rem;
