--- a/themes/alnur-theme/style.css
+++ b/themes/alnur-theme/style.css
@@ -6,6 +6,11 @@ Version: 1.0
 License: GNU General Public license v2 or later
 Text Domain: alnur
 */
+h1 {
+  font-family: "Novecento Web demiBold";
+  font-size: 2.5rem;
+}
+
 h2 {
   font-family: "Novecento Web demiBold";
   font-size: 2rem;
@@ -239,6 +244,16 @@ table {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 40%;
+}
+.hero-banner__heading {
+  left: 50%;
+  position: absolute;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.hero-banner__heading--white {
+  color: #fff;
 }
 
 @media only screen and (min-width: 576px) {
