--- a/themes/alnur-theme/sass/abstracts/_variables.scss
+++ b/themes/alnur-theme/sass/abstracts/_variables.scss
@@ -44,3 +44,125 @@ h4 {
 p {
   font-family: $font-text;
 }
+
+@media only screen and (min-width: $query__sm) {
+  p {
+    font-size: 1.1rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.1;
+  }
+
+  h2 {
+    font-size: 2rem * 1.1;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.1;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.1;
+  }
+}
+
+@media only screen and (min-width: $query__md) {
+  p {
+    font-size: 1.15rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.15;
+  }
+
+  h2 {
+    font-size: 2rem * 1.15;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.15;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.15;
+  }
+}
+@media only screen and (min-width: $query__lg) {
+  p {
+    font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.2;
+  }
+
+  h2 {
+    font-size: 2rem * 1.2;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.2;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.2;
+  }
+}
+@media only screen and (min-width: $query__xl) {
+  p {
+    font-size: 1.25rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.25;
+  }
+
+  h2 {
+    font-size: 2rem * 1.25;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.25;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.25;
+  }
+}
+@media only screen and (min-width: $query__xxl) {
+  p {
+    font-size: 1.3rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.3;
+  }
+
+  h2 {
+    font-size: 2rem * 1.3;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.3;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.3;
+  }
+}
+@media only screen and (min-width: $query__xxxl) {
+  p {
+    font-size: 1.4rem;
+  }
+  h1 {
+    font-size: 2.5rem * 1.4;
+  }
+
+  h2 {
+    font-size: 2rem * 1.4;
+  }
+
+  h3 {
+    font-size: 1.5rem * 1.4;
+  }
+
+  h4 {
+    font-size: 1.25rem * 1.4;
+  }
+}
